# PredictPesa

./: .gitattributes  .gitignore  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  netlify.toml  tailwind.config.ts
backend/: .env  .env.example  Dockerfile  LICENSE  README_backend.md  api_demo.py  api_demo_updated.py  debug_config.py  docker-compose.yml  endpoint_coverage_analysis.py  pyproject.toml  pytest.ini  requirements.txt  run_demo.py  setup_and_run.py  setup_env.py  simple_api_demo.py  simple_server.py  start_server.py  test_api_simple.py  test_basic.py
backend/docs/: BACKEND_PRD.md  FINAL_TESTING_SUMMARY.md  README.md  TEST_COVERAGE_REPORT.md  predictpesaPRD.md
backend/predictpesa/: __init__.py  main.py
backend/predictpesa/api/: __init__.py  deps.py
backend/predictpesa/api/v1/: __init__.py
backend/predictpesa/api/v1/endpoints/: auth.py  defi.py  health.py  markets.py  oracle.py  stakes.py  users.py
backend/predictpesa/core/: __init__.py  config.py  database.py  logging.py  redis.py
backend/predictpesa/middleware/: __init__.py  auth.py  rate_limit.py  request_id.py
backend/predictpesa/models/: __init__.py  base.py  market.py  oracle.py  stake.py  transaction.py  user.py
backend/predictpesa/schemas/: __init__.py  auth.py  market.py  stake.py  user.py
backend/predictpesa/services/: __init__.py  ai.py  market.py
backend/tests/: __init__.py  test_api.py  test_core.py  test_core_config.py  test_core_database.py  test_core_integration.py  test_core_isolated.py  test_core_logging.py  test_core_redis_mock.py  test_models.py  test_simple_api.py
contracts/: .env.example  .gitignore  AMMPool.sol  MarketFactory.sol  Oracle.sol  PredictionMarket.sol  README.md  hardhat.config.js  package.json
contracts/interfaces/: IERC20.sol  IHederaTokenService.sol
contracts/scripts/: deploy.js  interact.js
contracts/test/: MarketFactory.test.js
frontend/: README.md  index.html  vercel.json  vite.config.ts
frontend/src/: index.css  main.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/layout/: Header.tsx  Layout.tsx
frontend/src/components/modals/: WalletConnectionModal.tsx
frontend/src/pages/: MarketDetail.tsx  Markets.tsx  Portfolio.tsx
src/: App.tsx
src/components/layout/: Footer.tsx  MobileNavigation.tsx
src/components/modals/: BettingModal.tsx
src/components/ui/: CountUpStat.tsx
src/hooks/: useCountUp.tsx
src/pages/: Dashboard.tsx  Home.tsx  Profile.tsx  Rewards.tsx
